# rag_challange

./: .gitignore  01_experimet.ipynb  02_experiment.ipynb  03_experiment.ipynb  ExperimentPipeline.py  ExperimentPipelineV2.py  PrepareAnswers.py  README.md  StructuredAnswers.py  complition.ipynb  openai_large_100_10_v1.json  openai_small_1000_100_filtered_v1.json  openai_small_1000_100_v1.json  pjatk_team_001.json  pjatk_team_002.json  prepare_big_db.py  prepare_small_db.py  prepare_watson_big_db.py  prepare_watson_small_db.py  prepare_watson_test_small_db.py  processed_answer.json  pyproject.toml  watson_large_llama_405b_v1.json  watson_small_llama_405b_v1.json
data/r1.0-test/: questions_with_answer.json
data/r2.0/: questions.json
data/r2.0-test/: questions_with_answer.json
data/r2.0/synonyms/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+54 more)
lib/: Agent.py  DataRepository.py  EmbeddingProvider.py  SubmissionSchema.py  questions.py
output_v2/: answers.json  comparison_check.json  rechecked_answer.json  relevance.json
prompt/: boolean_prompt.txt  empty_prompt.txt  generic_prompt.txt  name_prompt.txt  names_prompt.txt  number_prompt.txt  relevance_prompt.txt  synonyms_prompt.txt
tests/: test_rag.py  test_rag_2.py
(+101 files in other folders)
