[tool.poetry]
name = "rag-challange"
version = "0.1.0"
description = ""
authors = ["alex <rasskazov.aleksey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.19"
langchain-community = "^0.3.18"
pypdf = "^5.3.0"
tiktoken = "^0.9.0"
openai = "^1.64.0"
chromadb = "^0.6.3"
langchain-openai = "^0.3.7"
notebook = "^7.3.2"
cryptography= "44.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
